--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,8 @@ numpy==1.26.2
 pandas==2.1.3
 scikit-learn==1.3.2
 flask==3.0.0
-requests==2.31.0 
+requests==2.31.0
+transformers==4.36.2
+googletrans==3.1.0a0
+tqdm==4.66.1
+torch==2.1.2 
